services wrap correctly and added frontend development

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,12 @@ article header {
   text-decoration: none;
 }
 
+@media (min-width: 768px) {
+  .services .grid {
+    grid-template-columns: repeat(auto-fill, minmax(16%, 1fr));
+  }
+}
+
 .services article {
   text-align: center;
 }
